<resources>
    <!--  Telas Mobile  -->
    <string name="app_name">Aion</string>
    <string name="title_home">Home</string>
    <string name="title_justificativa">Justificar Falta</string>
    <string name="title_reclamacao">Reclamações</string>

    <!--  Splash Screen  -->
    <string name="btn_continuarSplashScreen">
        <p>
            <strong>Continuar</strong>
        </p>
    </string>

    <!--  Login  -->
    <string name="lbl_codigoEmpresa">Código da Empresa</string>
    <string name="hint_codigoEmpresa">Código da sua empresa</string>
    <string name="txt_email">Email</string>
    <string name="hint_email">exemplo@gmail.com</string>
    <string name="txt_senha">Senha</string>
    <string name="hint_senha">Sua senha aqui</string>
    <string name="rbtn_lembreDeMim">Lembre de mim</string>
    <string name="txt_esqueceuSenha">
        <u>
            Esqueceu sua senha?
        </u>
    </string>
    <string name="btn_entrar">Entrar</string>
    <string name="txt_SouEmpresa">Sou empresa</string>
    <string name="btn_cadastrar">Cadastre-se</string>

    <!--  Perfil  -->

    <!--  Estatíticas  -->

    <string name="txt_estatistica">Estatísticas</string>
    <!--  Meu Desempenho  -->
    <string name="txt_meuDesempenho">Meu desempenho</string>
    <string name="desc_meuDesempenho">ir para o meu desempenho</string>

    <!--  Historico de notificacoes  -->
    <string name="txt_historicoNotificacoes">Histórico de notificações</string>
    <string name="desc_historicoNotificacoes">Ir para o histórico de notificações</string>

    <!--  Assesibilidade  -->
    <string name="desc_suporte">Ir para o suporte</string>
    <string name="desc_notificacoes">Ir para o suporte</string>
    <string name="txt_notificacoes">Notificações</string>
    <string name="txt_suporte">Suporte</string>
    <string name="txt_localizacao">Ativar Localização</string>
    <string name="spr_idioma">Selecionar Idioma</string>
    <string name="txt_idioma">Idioma</string>
    <string name="txt_acessibilidade">Acessibilidade</string>
    <string name="str_txt_perfil">Perfil</string>
    <string name="str_txt_editar_perfil">Editar Perfil</string>
    <string name="desc_voltar">TODO</string>
    <string name="lbl_cargo">...</string>
    <string name="lbl_nome">...</string>
    <string name="lbl_email">...</string>
    <string name="btn_editarPerfil">Editar Perfil</string>
    <string name="btn_sair">Sair</string>
    <string name="abrDomingo">D</string>
    <string name="abrSegunda">S</string>
    <string name="abrTerca">T</string>
    <string name="abrQuarta">Q</string>
    <string name="abrQuinta">Q</string>
    <string name="abrSexta">S</string>
    <string name="abrSabado">S</string>
    <string name="desc_btnAvancar">Próximo Mês</string>
    <string-array name="my_options_array">
        <item>Português (Brasil)</item>
        <item>Ingles (United States)</item>
    </string-array>
    <string-array name="reason_array">
        <item>Conpensar Banco</item>
        <item>Atestado Médico</item>
        <item>Declaração de Horas</item>
        <item>Abono Luto</item>
        <item>Licenca Maternidade</item>
        <item>Licenca Paternidade</item>
        <item>Licenca Gala</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc_fotoPerfil">Foto de Perfil</string>
    <string name="desc_localizacao">Ativar Localização</string>
    <string name="btn_justificar">Justificar</string>
    <string name="n_o_quer_confirmar_toque_aqui">
        Não quer confirmar? <strong style="color: #002FFF">Toque aqui</strong>
    </string>
    <string name="mn_home">Home</string>
    <string name="mn_justificativa">Justificaviva</string>
    <string name="mn_reclamacao">Reclamação</string>
    <string name="mn_dashboard">Dashboard</string>
    <string name="txt_reclamacao">Registrar Ocorrência</string>



    <string-array name="estado_civil_array">
        <item>Solteiro(a)</item>
        <item>Casado(a)</item>
        <item>Divorciado(a)</item>
        <item>Viúvo(a)</item>
        <item>Separado(a)</item>
    </string-array>

    <string name="estado_civil_prompt">Selecione o estado civil</string>

</resources>