<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="Olá, Jefferson"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/linearLayout_nesseMes"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout_nesseMes"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="Nesse Mês"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:layout_editor_absoluteX="35dp" />

        <LinearLayout

            android:id="@+id/linearLayout"
            android:layout_width="350dp"
            android:layout_height="179dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="62dp">


            <androidx.cardview.widget.CardView
                android:layout_width="1dp"
                android:layout_height="165dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                app:cardCornerRadius="12dp"
                app:cardElevation="2dp"
                app:contentPadding="8dp">

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="2"
                            android:textColor="@android:color/black"
                            android:textSize="36sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:fontFamily="@font/poppins_regular"
                            android:text=" faltas"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="76dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ic_add" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="2/26"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="165dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                app:cardCornerRadius="12dp"
                app:cardElevation="2dp"
                app:contentPadding="8dp">

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="6"
                            android:textColor="@android:color/black"
                            android:textSize="36sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:fontFamily="@font/poppins_regular"
                            android:text=" presenças"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="76dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/voltar" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_weight="1"
                            android:text="6/26"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_calendarcardview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_nesseMes">

        <TextView
            android:id="@+id/txt_calendario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="Calendário"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:layout_editor_absoluteX="35dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/calendarCardView"
            android:layout_width="349dp"
            android:layout_height="320dp"
            android:elevation="4dp"
            android:padding="20dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <LinearLayout
                android:id="@+id/layout_calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="12dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <ImageButton
                        android:id="@+id/previousMonthButton"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:background="@drawable/round_backgroud_buttons_calendar"
                        android:contentDescription="Mês Anterior"
                        android:elevation="2dp"
                        android:padding="10dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/voltar" />

                    <TextView
                        android:id="@+id/monthYearTextView"
                        android:layout_width="237dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_semibold"
                        android:gravity="center"
                        android:text="Junho de 2025"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/nextMonthButton"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:background="@drawable/round_backgroud_buttons_calendar"
                        android:contentDescription="@string/desc_btnAvancar"
                        android:elevation="2dp"
                        android:padding="10dp"
                        android:rotation="180"
                        android:scaleType="fitCenter"
                        android:src="@drawable/voltar" />
                </LinearLayout>

                <View
                    android:layout_width="300dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="#EEEEEE" />

                <LinearLayout
                    android:id="@+id/layout_dias_semana"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/CalendarDayHeader"
                        android:text="@string/abrDomingo" />

                    <TextView
                        style="@style/CalendarDayHeader"
                        android:text="@string/abrSegunda" />

                    <TextView
                        style="@style/CalendarDayHeader"
                        android:text="@string/abrTerca" />

                    <TextView
                        style="@style/CalendarDayHeader"
                        android:text="@string/abrQuarta" />

                    <TextView
                        style="@style/CalendarDayHeader"
                        android:text="@string/abrQuinta" />

                    <TextView
                        style="@style/CalendarDayHeader"
                        android:text="@string/abrSexta" />

                    <TextView
                        style="@style/CalendarDayHeader"
                        android:text="@string/abrSabado" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/calendarRecyclerView"
                    android:layout_width="305dp"
                    android:layout_height="194dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:overScrollMode="never" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>